--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       background: #f9f9f9;
       color: #111;
       line-height: 1.6;
-      font-weight: 300; /* 全体を細字に */
+      font-weight: 300;
     }
     .container {
-      width: 100%; /* 画面幅いっぱいに */
-      max-width: 1400px; /* 上限を広げる */
+      width: 100%;
+      max-width: 1400px;
       margin: 0 auto;
-      padding: 60px 40px; /* 横の余白を少し増やす */
+      padding: 60px 40px;
     }
     header {
       display: flex;
@@ -30,19 +30,19 @@
     }
     header h1 {
       margin: 0;
-      font-size: 1.4rem; /* さらに大きく */
-      font-weight: 600; /* 名前だけは少し太めに */
+      font-size: 1.4rem;
+      font-weight: 600;
       letter-spacing: -0.5px;
     }
     header .meta {
       margin-top: 12px;
-      font-size: 1.1rem; /* 少し大きく */
+      font-size: 1.1rem;
       color: #444;
       font-weight: 300;
     }
     header .links {
       margin-top: 10px;
-      font-size: 1rem; /* 少し大きく */
+      font-size: 1rem;
       font-weight: 300;
     }
     header a {
@@ -59,12 +59,12 @@
     .projects {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 100px; /* プロジェクト間は広め */
+      gap: 100px;
     }
     .project-group {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 20px; /* 同じプロジェクト内の画像は近く */
+      gap: 20px;
     }
     .project img {
       width: 100%;
@@ -77,12 +77,12 @@
       font-weight: 300;
       text-transform: uppercase;
       letter-spacing: 0.05em;
-      color: #888; /* 薄めに変更 */
+      color: #888;
     }
     .sub {
       font-size: 0.8rem;
       font-weight: 300;
-      color: #aaa; /* より薄めに */
+      color: #aaa;
     }
     footer {
       text-align: left;
@@ -114,30 +114,80 @@
     </header>
 
     <main class="projects">
+      <!-- Project 15 to Project 1 -->
       <div class="project-group">
-        <div class="project">
-          <img src="images/project1.jpg" alt="Project 1">
-        </div>
-        <div class="project">
-          <img src="images/project1_extra.jpg" alt="Project 1 extra">
-        </div>
-        <div class="caption">Project 1 Title</div>
+        <div class="project"><img src="images/project15.jpg" alt="Project 15"></div>
+        <div class="caption">Project 15 Title</div>
         <div class="sub">Role / Collaboration info</div>
       </div>
-
       <div class="project-group">
-        <div class="project">
-          <img src="images/project2.jpg" alt="Project 2">
-        </div>
+        <div class="project"><img src="images/project14.jpg" alt="Project 14"></div>
+        <div class="caption">Project 14 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project13.jpg" alt="Project 13"></div>
+        <div class="caption">Project 13 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project12.jpg" alt="Project 12"></div>
+        <div class="caption">Project 12 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project11.jpg" alt="Project 11"></div>
+        <div class="caption">Project 11 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project10.jpg" alt="Project 10"></div>
+        <div class="caption">Project 10 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project9.jpg" alt="Project 9"></div>
+        <div class="caption">Project 9 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project8.jpg" alt="Project 8"></div>
+        <div class="caption">Project 8 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project7.jpg" alt="Project 7"></div>
+        <div class="caption">Project 7 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project6.jpg" alt="Project 6"></div>
+        <div class="caption">Project 6 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project5.jpg" alt="Project 5"></div>
+        <div class="caption">Project 5 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project4.jpg" alt="Project 4"></div>
+        <div class="caption">Project 4 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project3.jpg" alt="Project 3"></div>
+        <div class="caption">Project 3 Title</div>
+        <div class="sub">Role / Collaboration info</div>
+      </div>
+      <div class="project-group">
+        <div class="project"><img src="images/project2.jpg" alt="Project 2"></div>
         <div class="caption">Project 2 Title</div>
         <div class="sub">Role / Collaboration info</div>
       </div>
-
       <div class="project-group">
-        <div class="project">
-          <img src="images/project3.jpg" alt="Project 3">
-        </div>
-        <div class="caption">Project 3 Title</div>
+        <div class="project"><img src="images/project1.jpg" alt="Project 1"></div>
+        <div class="caption">Project 1 Title</div>
         <div class="sub">Role / Collaboration info</div>
       </div>
     </main>
