--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     .container {
       width: 100%;
-      max-width: 1200px; /* 少し縮める */
+      max-width: 1200px;
       margin: 0 auto;
       padding: 60px 40px;
     }
@@ -30,19 +30,19 @@
     }
     header h1 {
       margin: 0;
-      font-size: 1.4rem;
+      font-size: 1.8rem; /* 少し大きく */
       font-weight: 600;
       letter-spacing: -0.5px;
     }
     header .meta {
       margin-top: 12px;
-      font-size: 1.1rem;
+      font-size: 1.3rem; /* 大きく */
       color: #444;
       font-weight: 300;
     }
     header .links {
       margin-top: 10px;
-      font-size: 1rem;
+      font-size: 1.1rem; /* 大きく */
       font-weight: 300;
     }
     header a {
@@ -59,7 +59,7 @@
     .projects {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 80px; /* 少し詰める */
+      gap: 80px;
     }
     .project-group {
       display: grid;
@@ -67,11 +67,11 @@
       gap: 20px;
     }
     .project img {
-      width: 90%; /* 幅を少し縮める */
-      max-width: 1000px; /* 最大幅を制限 */
+      width: 90%;
+      max-width: 1000px;
       height: auto;
       display: block;
-      margin: 0 auto; /* 中央寄せ */
+      margin: 0 auto;
     }
     .caption {
       margin-top: 8px;
@@ -97,9 +97,9 @@
     @media (max-width: 800px) {
       .container { padding: 40px 20px; }
       .projects { grid-template-columns: 1fr; }
-      header h1 { font-size: 1.1rem; }
-      header .meta { font-size: 1rem; }
-      header .links { font-size: 0.95rem; }
+      header h1 { font-size: 1.4rem; }
+      header .meta { font-size: 1.1rem; }
+      header .links { font-size: 1rem; }
       .project img { width: 100%; max-width: 100%; }
     }
   </style>
