--- a/index.html
+++ b/index.html
@@ -30,23 +30,25 @@
     }
     header h1 {
       margin: 0;
-      font-size: 1.8rem; /* 少し大きく */
+      font-size: 1.8rem;
       font-weight: 600;
       letter-spacing: -0.5px;
+      color: #222; /* 真っ黒ではなく濃いグレー */
     }
     header .meta {
       margin-top: 12px;
-      font-size: 1.3rem; /* 大きく */
+      font-size: 1.3rem;
       color: #444;
       font-weight: 300;
     }
     header .links {
       margin-top: 10px;
-      font-size: 1.1rem; /* 大きく */
+      font-size: 1.1rem;
       font-weight: 300;
+      color: #333;
     }
     header a {
-      color: #111;
+      color: #333; /* 濃いグレーに変更 */
       text-decoration: none;
       margin-right: 12px;
       border-bottom: 1px solid transparent;
@@ -54,7 +56,7 @@
       font-weight: 300;
     }
     header a:hover {
-      border-color: #111;
+      border-color: #333;
     }
     .projects {
       display: grid;
@@ -65,6 +67,8 @@
       display: grid;
       grid-template-columns: 1fr;
       gap: 20px;
+      justify-items: center;
+      text-align: center;
     }
     .project img {
       width: 90%;
