--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <title>Shun Yanagisawa | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Fonts: Chivo Mono -->
+  <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: monospace, "Courier New", Courier, Consolas, Menlo, Monaco;
+      font-family: 'Chivo Mono', monospace;
       background: #f9f9f9;
       color: #111;
       line-height: 1.6;
@@ -33,7 +35,7 @@
       font-size: 1.8rem;
       font-weight: 600;
       letter-spacing: -0.5px;
-      color: #222; /* 真っ黒ではなく濃いグレー */
+      color: #222;
     }
     header .meta {
       margin-top: 12px;
@@ -48,7 +50,7 @@
       color: #333;
     }
     header a {
-      color: #333; /* 濃いグレーに変更 */
+      color: #333;
       text-decoration: none;
       margin-right: 12px;
       border-bottom: 1px solid transparent;
