--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Shun Yanagisawa | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Fonts: Chivo Mono -->
-  <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- Google Fonts: IBM Plex Mono -->
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Chivo Mono', monospace;
+      font-family: 'IBM Plex Mono', monospace;
       background: #f9f9f9;
       color: #111;
       line-height: 1.6;
