--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <title>Shun Yanagisawa | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Fonts: IBM Plex Mono -->
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- Google Fonts: Roboto Mono -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'IBM Plex Mono', monospace;
+      font-family: 'Roboto Mono', monospace;
       background: #f9f9f9;
       color: #111;
-      line-height: 1.6;
+      line-height: 1.4; /* 行間を少し詰める */
       font-weight: 300;
     }
     .container {
@@ -37,17 +37,13 @@
       letter-spacing: -0.5px;
       color: #222;
     }
-    header .meta {
-      margin-top: 12px;
-      font-size: 1.3rem;
+    header .meta,
+    header .links {
+      margin-top: 8px;
+      font-size: 1rem; /* 同じサイズに統一 */
       color: #444;
       font-weight: 300;
-    }
-    header .links {
-      margin-top: 10px;
-      font-size: 1.1rem;
-      font-weight: 300;
-      color: #333;
+      line-height: 1.4; /* 行間詰める */
     }
     header a {
       color: #333;
@@ -104,8 +100,8 @@
       .container { padding: 40px 20px; }
       .projects { grid-template-columns: 1fr; }
       header h1 { font-size: 1.4rem; }
-      header .meta { font-size: 1.1rem; }
-      header .links { font-size: 1rem; }
+      header .meta,
+      header .links { font-size: 0.95rem; }
       .project img { width: 100%; max-width: 100%; }
     }
   </style>
