--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <div class="container">
     <header>
       <h1>Shun Yanagisawa</h1>
-      <div class="meta">Graphic Designer & Art Director / Tokyo, Japan</div>
+      <div class="meta">Art Director & Graphic Designer / Tokyo, Japan</div>
       <div class="links">
         <a href="mailto:yvnvgin@gmail.com">yvnvgin@gmail.com</a>
         <a href="https://instagram.com/_yanagiii">@_yanagiii</a>
