--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Shun Yanagisawa | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Fonts: Roboto Mono -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- Google Fonts: Roboto Mono & Noto Sans JP for captions -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -81,11 +81,13 @@
       font-weight: 300;
       letter-spacing: 0.05em;
       color: #888;
+      font-family: 'Noto Sans JP', sans-serif;
     }
     .sub {
       font-size: 0.8rem;
       font-weight: 300;
       color: #aaa;
+      font-family: 'Noto Sans JP', sans-serif;
     }
     footer {
       text-align: left;
