--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Shun Yanagisawa | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Fonts: Roboto Mono & Noto Sans JP for captions -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
+<!-- Google Fonts: PT Mono & Noto Sans JP for captions -->
+<link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -30,29 +30,21 @@
       padding-bottom: 30px;
       text-align: left;
     }
-    header h1 {
-      margin: 0;
-      font-size: 1.8rem;
-      font-weight: 600;
-      letter-spacing: -0.5px;
-      color: #222;
-    }
-    header .meta,
-    header .links {
-      margin-top: 8px;
-      font-size: 1rem; /* 同じサイズに統一 */
-      color: #444;
-      font-weight: 300;
-      line-height: 1.4; /* 行間詰める */
-    }
-    header a {
-      color: #333;
-      text-decoration: none;
-      margin-right: 12px;
-      border-bottom: 1px solid transparent;
-      transition: border-color 0.18s;
-      font-weight: 300;
-    }
+header h1,
+header .meta,
+header .links {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #444; /* 少し淡い色 */
+  margin: 0;
+}
+.header-right {
+  gap: 2px; /* 間隔をもっと詰める */
+}
+header a {
+  color: #555; /* リンクも淡く */
+}
+
     header a:hover {
       border-color: #333;
     }
