--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <title>Shun Yanagisawa | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Google Fonts: PT Mono & Noto Sans JP for captions -->
-<link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Google Fonts: PT Mono & Noto Sans JP for captions -->
+  <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Roboto Mono', monospace;
+      font-family: 'PT Mono', monospace;
       background: #f9f9f9;
       color: #111;
-      line-height: 1.4; /* 行間を少し詰める */
+      line-height: 1.4;
       font-weight: 300;
     }
     .container {
@@ -23,30 +23,41 @@
     }
     header {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: flex-start;
       margin-bottom: 80px;
       border-bottom: 1px solid #eee;
-      padding-bottom: 30px;
+      padding-bottom: 20px;
       text-align: left;
     }
-header h1,
-header .meta,
-header .links {
-  font-size: 1rem;
-  font-weight: 400;
-  color: #444; /* 少し淡い色 */
-  margin: 0;
-}
-.header-right {
-  gap: 2px; /* 間隔をもっと詰める */
-}
-header a {
-  color: #555; /* リンクも淡く */
-}
-
+    header h1,
+    header .meta,
+    header .links {
+      font-size: 1rem;
+      font-weight: 400;
+      color: #444; /* 少し淡い色 */
+      margin: 0;
+    }
+    header h1 {
+      flex: 1;
+    }
+    .header-right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 2px; /* 間隔をもっと詰める */
+    }
+    header a {
+      color: #555; /* リンクも淡く */
+      text-decoration: none;
+      margin-right: 12px;
+      border-bottom: 1px solid transparent;
+      transition: border-color 0.18s;
+      font-weight: 400;
+    }
     header a:hover {
-      border-color: #333;
+      border-color: #555;
     }
     .projects {
       display: grid;
@@ -72,7 +83,7 @@ header a {
       font-size: 0.9rem;
       font-weight: 300;
       letter-spacing: 0.05em;
-      color: #888;
+      color: #666;
       font-family: 'Noto Sans JP', sans-serif;
     }
     .sub {
@@ -89,13 +100,13 @@ header a {
       border-top: 1px solid #eee;
       padding-top: 20px;
       font-weight: 300;
+      font-family: 'PT Mono', monospace;
     }
     @media (max-width: 800px) {
       .container { padding: 40px 20px; }
+      header { flex-direction: column; gap: 4px; } /* モバイル時も間隔詰め */
+      header h1, header .meta, header .links { font-size: 0.95rem; color: #555; }
       .projects { grid-template-columns: 1fr; }
-      header h1 { font-size: 1.4rem; }
-      header .meta,
-      header .links { font-size: 0.95rem; }
       .project img { width: 100%; max-width: 100%; }
     }
   </style>
@@ -104,10 +115,12 @@ header a {
   <div class="container">
     <header>
       <h1>Shun Yanagisawa</h1>
-      <div class="meta">Art Director & Graphic Designer / Tokyo, Japan</div>
-      <div class="links">
-        <a href="mailto:yvnvgin@gmail.com">yvnvgin@gmail.com</a>
-        <a href="https://instagram.com/_yanagiii">@_yanagiii</a>
+      <div class="header-right">
+        <div class="meta">Graphic Designer & Art Director / Tokyo, Japan</div>
+        <div class="links">
+          <a href="mailto:yvnvgin@gmail.com">yvnvgin@gmail.com</a>
+          <a href="https://instagram.com/_yanagiii">@_yanagiii</a>
+        </div>
       </div>
     </header>
 
@@ -185,8 +198,8 @@ header a {
       </div>
       <div class="project-group">
         <div class="project"><img src="images/project1.jpg" alt="Project 1"></div>
-        <div class="caption">Artwork for Aile The Shota 2nd EP IMA</div>
-        <div class="sub"></div>
+        <div class="caption">Project 1 Title</div>
+        <div class="sub">Role / Collaboration info</div>
       </div>
     </main>
 
