--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       </div>
       <div class="project-group">
         <div class="project"><img src="images/project1.jpg" alt="Project 1"></div>
-        <div class="caption">Project 1 Title</div>
-        <div class="sub">Role / Collaboration info</div>
+        <div class="caption">Artwork for Aile The Shota 2nd EP IMA</div>
+        <div class="sub"></div>
       </div>
     </main>
 
