--- a/index.html
+++ b/index.html
@@ -22,20 +22,24 @@
       padding: 60px 40px;
     }
     header {
+      position: fixed; /* 常に画面に固定 */
+      top: 0;
+      left: 0;
+      width: 100%;
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      margin-bottom: 80px;
+      background: #f9f9f9;
+      padding: 20px 40px;
       border-bottom: 1px solid #eee;
-      padding-bottom: 20px;
-      text-align: left;
+      z-index: 1000;
     }
     header h1,
     header .meta,
     header .links {
-      font-size: 1rem;
+      font-size: 1.2rem; /* 大きく */
       font-weight: 400;
-      color: #444; /* 少し淡い色 */
+      color: #333; /* 少し濃く */
       margin: 0;
     }
     header h1 {
@@ -46,10 +50,10 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 2px; /* 間隔をもっと詰める */
+      gap: 4px;
     }
     header a {
-      color: #555; /* リンクも淡く */
+      color: #444;
       text-decoration: none;
       margin-right: 12px;
       border-bottom: 1px solid transparent;
@@ -57,12 +61,13 @@
       font-weight: 400;
     }
     header a:hover {
-      border-color: #555;
+      border-color: #444;
     }
     .projects {
       display: grid;
       grid-template-columns: 1fr;
       gap: 80px;
+      margin-top: 160px; /* ヘッダーの固定分の余白 */
     }
     .project-group {
       display: grid;
@@ -83,20 +88,20 @@
       font-size: 0.9rem;
       font-weight: 300;
       letter-spacing: 0.05em;
-      color: #777;
+      color: #666;
       font-family: 'Noto Sans JP', sans-serif;
     }
     .sub {
       font-size: 0.8rem;
       font-weight: 300;
-      color: #777;
+      color: #666;
       font-family: 'Noto Sans JP', sans-serif;
     }
     footer {
       text-align: left;
       margin-top: 100px;
       font-size: 0.85rem;
-      color: #555;
+      color: #444;
       border-top: 1px solid #eee;
       padding-top: 20px;
       font-weight: 300;
@@ -104,9 +109,9 @@
     }
     @media (max-width: 800px) {
       .container { padding: 40px 20px; }
-      header { flex-direction: column; gap: 4px; } /* モバイル時も間隔詰め */
-      header h1, header .meta, header .links { font-size: 0.95rem; color: #555; }
-      .projects { grid-template-columns: 1fr; }
+      header { flex-direction: column; gap: 6px; align-items: flex-start; }
+      header h1, header .meta, header .links { font-size: 1.05rem; color: #444; }
+      .projects { margin-top: 200px; }
       .project img { width: 100%; max-width: 100%; }
     }
   </style>
