--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      background: #f9f9f9;
+      background: transparent; /* 完全に透明 */
       padding: 20px 40px;
-      border-bottom: 1px solid #eee;
+      border-bottom: none; /* 線も削除 */
       z-index: 1000;
     }
     header h1,
