--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       font-weight: 400;
       color: #333; /* 少し濃く */
       margin: 0;
+      line-height: 1.1; /* ← ここを追加、数値を小さくすると行間が狭くなる */
     }
     header h1 {
       flex: 1;
