--- a/index.html
+++ b/index.html
@@ -109,12 +109,20 @@
       font-family: 'PT Mono', monospace;
     }
     @media (max-width: 800px) {
-      .container { padding: 40px 20px; }
-      header { flex-direction: column; gap: 6px; align-items: flex-start; }
-      header h1, header .meta, header .links { font-size: 1.05rem; color: #444; }
-      .projects { margin-top: 200px; }
-      .project img { width: 100%; max-width: 100%; }
-    }
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px; /* ← 名前と自己紹介の間の余白 */
+  }
+  header h1 {
+    font-size: 1rem; /* 名前を小さめに */
+  }
+  header .meta,
+  header .links {
+    font-size: 0.9rem; /* 自己紹介・SNSも小さめに */
+  }
+  .projects { margin-top: 220px; }
+}
   </style>
 </head>
 <body>
