--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
   header .links {
     font-size: 0.7rem; /* 自己紹介・SNSも小さめに */
   }
+      .caption {
+    font-size: 0.75rem; /* モバイル時はさらに小さく */
+  }
+  footer {
+    font-size: 0.7rem; /* モバイル時は小さく */
+  }
   .projects { margin-top: 220px; }
 }
   </style>
