--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       width: 100%; /* フル幅に */
       height: auto;
       display: block;
+      margin: 0 auto;
     }
     .caption {
       margin-top: 8px;
