--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       font-family: 'PT Mono', monospace;
     }
     @media (max-width: 800px) {
-      .container { padding: 0 16px; } /* 余白を小さく */
+      .container { padding: 0px; } /* 余白を小さく */
       header {
         flex-direction: column;
         align-items: flex-start;
