--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     header .links {
       font-size: 1.2rem;
       font-weight: 400;
-      color: #111;
+      color: #242424;
       margin: 0;
       line-height: 1.2;
     }
@@ -57,7 +57,7 @@
       gap: 4px;
     }
     header a {
-      color: #111;
+      color: #242424;
       text-decoration: none;
       margin-right: 12px;
       border-bottom: 1px solid transparent;
@@ -65,7 +65,7 @@
       font-weight: 400;
     }
     header a:hover {
-      border-color: #111;
+      border-color: #242424;
     }
     .projects {
       display: grid;
@@ -97,21 +97,21 @@
     .sub {
       font-size: 0.8rem;
       font-weight: 300;
-      color: #aaa;
+      color: #666;
       font-family: 'Noto Sans JP', sans-serif;
     }
     footer {
       text-align: left;
       margin-top: 100px;
       font-size: 0.85rem;
-      color: #777;
+      color: #242424;
       border-top: 1px solid #eee;
       padding-top: 20px;
       font-weight: 300;
       font-family: 'PT Mono', monospace;
     }
     @media (max-width: 800px) {
-      .container { padding: 0px; } /* 余白を小さく */
+      .container { padding: 0 12px; } 
       header {
         flex-direction: column;
         align-items: flex-start;
