--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       }
       .projects { margin-top: 220px; }
       .project img {
-  　　　　width: calc(100% - 24px); /* ← 左右に少し余白を残す */
- 　　　　 max-width: 100%;
-  　　　　margin: 0 auto;
-  　　　　display: block;
-　　　　}
+    width: calc(100% - 24px); /* 半角スペースできちんと書く */
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
   </style>
 </head>
 <body>
