--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
       }
       .projects { margin-top: 220px; }
       .project img {
-    width: calc(100% - 24px); /* 半角スペースできちんと書く */
+    width: calc(100% - 24px);
     max-width: 100%;
     margin: 0 auto;
     display: block;
   }
+}  /* ← これが抜けてた！ */
   </style>
 </head>
 <body>
