--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
         font-size: 0.7rem;
       }
       .caption {
-        font-size: 0.5rem; /* モバイル時は小さめ */
+        font-size: 0.7rem; /* モバイル時は小さめ */
+      }
+      .sub {
+        font-size: 0.7rem; /* モバイル時は小さめ */
       }
       footer {
         font-size: 0.7rem; /* モバイル時は小さめ */
