--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       }
       .projects { margin-top: 220px; }
       .project img {
-    width: calc(100% - 24px);
+    width: 100%;
     max-width: 100%;
     margin: 0 auto;
     display: block;
