--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
       header {
         flex-direction: column;
         align-items: flex-start;
-        gap: 14px; /* 名前と自己紹介の間に余白 */
+        gap: 14px; /
+        padding: 20px 16px;
       }
       header h1 {
         font-size: 0.7rem;
