--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       header {
         flex-direction: column;
         align-items: flex-start;
-        gap: 14px; /
+        gap: 14px; 
         padding: 20px 16px;
       }
       header h1 {
