--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 14px; 
-        padding: 20px 0px;
+        padding: 20px 16px;
       }
       header h1 {
         font-size: 0.7rem;
@@ -137,8 +137,8 @@
       .projects { margin-top: 220px; }
       .project img {
     width: 100%;
-    max-width: 100%;
-    margin: 0 auto;
+    max-width: calc(100% - 32px); /* ← 左右に16pxずつ余白 */
+    margin: 0 auto; /* ← 中央寄せ */
     display: block;
   }
 }  /* ← これが抜けてた！ */
