--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       .projects { margin-top: 220px; }
       .project img {
     width: 100%;
-    max-width: calc(100% - 32px); /* ← 左右に16pxずつ余白 */
+    max-width: 100%;
     margin: 0 auto; /* ← 中央寄せ */
     display: block;
   }
