--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 14px; 
-        padding: 20px 16px;
+        padding: 0;
       }
       header h1 {
         font-size: 0.7rem;
@@ -136,9 +136,8 @@
       }
       .projects { margin-top: 220px; }
       .project img {
-    width: 100%;
-    max-width: 100%;
-    margin: 0 auto; /* ← 中央寄せ */
+    width: calc(100% - 32px); /* ← 画像にだけ16px余白を与える */
+    margin: 0 auto;
     display: block;
   }
 }  /* ← これが抜けてた！ */
