--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
       }
       footer {
         font-size: 0.7rem; /* モバイル時は小さめ */
+        text-align: center;  /* ← 左寄せから中央寄せに変更 */
+        margin-top: 100px;
+  padding-top: 20px;
+  padding-bottom: 40px; /* ← 下に余白を追加 */
       }
       .projects { margin-top: 220px; }
       .project img {
