--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
       font-family: 'Noto Sans JP', sans-serif;
     }
     footer {
-      text-align: left;
-      margin-top: 100px;
+      text-align: center;
+      width: 100%;         /* フル幅に広げる */
+      max-width: 1200px;   /* コンテンツ幅を制限 */
+      margin: 100px auto 40px auto;  /* 上に余白100px、下に40px */
       font-size: 0.85rem;
       color: #242424;
       border-top: 1px solid #eee;
