--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       flex-direction: column;
       align-items: flex-start;
       gap: 4px;
+      text-align: left;
+  margin-right: 40px; /* ← これを追加 */
     }
     header a {
       color: #242424;
