--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      align-items: flex-end;
+      align-items: flex-start;
       gap: 4px;
       text-align: left;
   margin-right: 40px; /* ← これを追加 */
