--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       left: 0;
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-between;/* 左は名前、右は自己紹介エリア */
       align-items: flex-start;
       background: transparent; /* 完全に透明 */
       padding: 20px 40px;
@@ -53,7 +53,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: flex-end;
       gap: 4px;
       text-align: left;
   margin-right: 40px; /* ← これを追加 */
