--- a/index.html
+++ b/index.html
@@ -53,16 +53,11 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      align-items: flex-end;
+      align-items: flex-start;
       gap: 4px;
       text-align: left;
   margin-right: 40px; /* ← これを追加 */
     }
-    .header-right .meta,
-.header-right .links {
-  align-self: flex-end;   /* これで各子要素を右端に揃える */
-  text-align: left;       /* テキストは左揃え */
-}
     header a {
       color: #242424;
       text-decoration: none;
