--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       flex: 1;
     }
     .header-right {
-      flex: 1;
+      margin-left: auto;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
