--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       flex: 1;
     }
     .header-right {
-      margin-left: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 4px;
-      text-align: left;
-      margin-right: 40px; /* ← これを追加 */
+      margin-left: auto;         /* ← 右に寄せる */
+  margin-right: 40px;        /* ← 左右余白を揃える */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;   /* ← テキストを左揃えのまま */
+  gap: 4px;
+  text-align: left;
     }
     header a {
       color: #242424;
