--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
       padding: 60px 40px;
     }
     header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px 40px; /* 左右余白40pxずつ */
-  box-sizing: border-box;
-  width: 100%;
-}
+      position: fixed; /* 常に画面に固定 */
+      top: 0;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;/* 左は名前、右は自己紹介エリア */
+      align-items: flex-start;
+      background: transparent; /* 完全に透明 */
+      padding: 20px 40px;
+      border-bottom: none; /* 線も削除 */
+      z-index: 1000;
+    }
     header h1,
     header .meta,
     header .links {
@@ -49,20 +50,14 @@
       flex: 1;
     }
     .header-right {
-  margin-left: auto;       /* 名前側との距離を詰める */
-  margin-right: 40px;       /* 右側余白を40px確保 */
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;  /* テキストは左揃え */
-  text-align: left;
-  gap: 4px;
-}
-    .header-right .meta,
-.header-right .links {
-  text-align: left;
-  align-self: flex-start;
-}
-    
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 4px;
+      text-align: left;
+  margin-right: 40px; /* ← これを追加 */
+    }
     header a {
       color: #242424;
       text-decoration: none;
