--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     }
     .project img {
       width: 100%; /* フル幅に */
+      max-width: 1000px; /* ← 最大幅を制限 */
       height: auto;
       display: block;
       margin: 0 auto;
