--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       flex: 1;
     }
     .header-right {
-      margin-left: auto;
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -84,7 +84,6 @@
     }
     .project img {
       width: 100%; /* フル幅に */
-      max-width: 1000px; /* ← 最大幅を制限 */
       height: auto;
       display: block;
       margin: 0 auto;
