--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       text-align: center;
     }
     .project img {
-      width: 100%; /* フル幅に */
+      width: calc(100% - 80px); /* ← 常に左右40pxずつ余白を確保 */
       max-width: 1000px;   /* ← 最大幅を決める */
       height: auto;
       display: block;
