--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
       height: auto;
       display: block;
       margin: 0 auto;
+      padding: 0 40px; /* ← 左右に40pxの余白を常に入れる */
+  box-sizing: border-box; /* ← 余白込みで幅を計算する */
     }
     .caption {
       margin-top: 8px;
