--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
       text-align: center;
     }
     .project img {
-      width: 100%;            /* ← ここをシンプルに */
-      max-width: 1000px;   /* ← 最大幅を決める */
-      height: auto;
-      display: block;
-      margin: 0 auto;
-      padding: 0 40px; /* ← 左右に40pxの余白を常に入れる */
-  box-sizing: border-box; /* ← 余白込みで幅を計算する */
+      width: 100%;
+  max-width: 1000px;
+  height: auto;
+  display: block;
+  margin-left: 0;       /* 左は詰める */
+  margin-right: auto;   /* 画像を左寄せに */
+  padding-right: 40px;  /* 右にだけ40px余白 */
+  box-sizing: border-box;
     }
     .caption {
       margin-top: 8px;
